--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/simonask/glamour"
+homepage = "https://docs.rs/glamour/latest/glamour/"
 keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
 categories = ["game-development", "mathematics", "graphics", "no-std"]
 
