--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,9 @@ serde = { version = "^1.0", features = ["derive"] }
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 criterion = { version = "^0.3", features = ["html_reports"] }
 
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3.0"
+
 [[bench]]
 name = "mat"
 harness = false
