--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,7 +19,7 @@ jobs:
       #   run: cargo install cargo-tarpaulin
 
       - name: Generate code coverage
-        run: cargo tarpaulin -v --timeout 120 --out Lcov --output-dir ./coverage
+        run: cargo tarpaulin -v --all-features --timeout 120 --out Lcov --output-dir ./coverage
 
       - name: Upload to coveralls.io
         uses: coverallsapp/github-action@master
