--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   coverage:
     container:
-      image: xd009642/tarpaulin
+      image: xd009642/tarpaulin:develop-nightly
       options: --security-opt seccomp=unconfined
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +19,7 @@ jobs:
       #   run: cargo install cargo-tarpaulin
 
       - name: Generate code coverage
-        run: cargo tarpaulin -v --all-features --timeout 120 --out Lcov --output-dir ./coverage --run-types Tests Doctests
+        run: cargo +nightly tarpaulin -v --all-features --timeout 120 --out Lcov --output-dir ./coverage --run-types Tests Doctests
 
       - name: Upload to coveralls.io
         uses: coverallsapp/github-action@master
