--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,11 +1,5 @@
 name: coverage
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 jobs:
   coverage:
     container:
@@ -19,9 +13,9 @@ jobs:
       #   run: cargo install cargo-tarpaulin
 
       - name: Generate code coverage
-        run: cargo +nightly tarpaulin -v --all-features --timeout 120 --out Lcov --output-dir ./coverage --run-types Tests Doctests
+        run: cargo +nightly tarpaulin -v --all-features --timeout 120 --out Lcov --output-dir ./coverage --coveralls ${{ secrets.COVERALLS_REPO_TOKEN }} --run-types Tests Doctests
 
-      - name: Upload to coveralls.io
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Upload to coveralls.io
+      #   uses: coverallsapp/github-action@master
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
