--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,7 +13,7 @@ jobs:
       #   run: cargo install cargo-tarpaulin
 
       - name: Generate code coverage
-        run: cargo +nightly tarpaulin -v --all-features --timeout 120 --out Lcov --output-dir ./coverage --coveralls ${{ secrets.COVERALLS_REPO_TOKEN }} --run-types Tests Doctests
+        run: cargo +nightly tarpaulin -v --all-features --all-targets --timeout 120 --out Lcov --output-dir ./coverage --coveralls ${{ secrets.COVERALLS_REPO_TOKEN }}
 
       # - name: Upload to coveralls.io
       #   uses: coverallsapp/github-action@master
