--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,9 +13,9 @@ jobs:
       #   run: cargo install cargo-tarpaulin
 
       - name: Generate code coverage
-        run: cargo +nightly tarpaulin -v --all-features --bins --lib --doc --timeout 120 --out Lcov --output-dir ./coverage --coveralls ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: cargo +nightly tarpaulin -v --all-features --bins --lib --doc --timeout 120 --out Xml
 
-      # - name: Upload to coveralls.io
-      #   uses: coverallsapp/github-action@master
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v2
+        with:
+          fail_ci_if_error: true
