--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,15 +1,9 @@
 name: coverage
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 jobs:
   coverage:
     container:
-      image: xd009642/tarpaulin
+      image: xd009642/tarpaulin:develop-nightly
       options: --security-opt seccomp=unconfined
     runs-on: ubuntu-latest
     steps:
@@ -19,9 +13,10 @@ jobs:
       #   run: cargo install cargo-tarpaulin
 
       - name: Generate code coverage
-        run: cargo tarpaulin -v --timeout 120 --out Lcov --output-dir ./coverage
+        run: cargo +nightly tarpaulin -v --all-features --bins --lib --doc --timeout 120 --out Xml
 
-      - name: Upload to coveralls.io
-        uses: coverallsapp/github-action@master
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
