--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,7 +13,7 @@ jobs:
       #   run: cargo install cargo-tarpaulin
 
       - name: Generate code coverage
-        run: cargo +nightly tarpaulin -v --all-features --bins --lib --doc --timeout 120 --out Xml
+        run: cargo +nightly tarpaulin -v --all-features --bins --lib --doc --timeout 120 --out Xml --exclude-files src/docs/*
 
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v2
