--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,21 +2,18 @@ name: coverage
 on: [push, pull_request]
 jobs:
   coverage:
-    container:
-      image: xd009642/tarpaulin:develop-nightly
-      options: --security-opt seccomp=unconfined
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      # - name: Install tarpaulin
-      #   run: cargo install cargo-tarpaulin
-
+      - name: Install Rust
+        run: rustup toolchain install nightly --component llvm-tools-preview
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
-        run: cargo +nightly tarpaulin -v --all-features --bins --lib --doc --timeout 120 --out Xml --exclude-files src/docs/*
-
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v2
+        run: cargo +nightly llvm-cov --all-features --doctests --workspace --ignore-filename-regex "src/docs/.*" --lcov --output-path lcov.info
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
         with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: lcov.info
           fail_ci_if_error: true
-          token: ${{ secrets.CODECOV_TOKEN }}
