--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,12 @@ categories = ["game-development", "mathematics", "graphics", "no-std"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-glam = { version = "^0.20.5", default-features = false, features = ["bytemuck", "approx"] }
+glam = { version = "0.21.1", default-features = false, features = [
+    "bytemuck",
+    "approx",
+] }
 bytemuck = { version = "^1.8", default-features = false }
-num-traits = {version = "^0.2", default-features = false }
+num-traits = { version = "^0.2", default-features = false }
 approx = "^0.5"
 
 [dependencies.serde]
