--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "glamour"
-version = "0.3.1"
+version = "0.4.0-dev"
 edition = "2021"
 description = "Strongly typed linear algebra with glam"
 authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
@@ -15,9 +15,12 @@ categories = ["game-development", "mathematics", "graphics", "no-std"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-glam = { version = "^0.20.5", default-features = false, features = ["bytemuck", "approx"] }
+glam = { version = "0.21.1", default-features = false, features = [
+    "bytemuck",
+    "approx",
+] }
 bytemuck = { version = "^1.8", default-features = false }
-num-traits = {version = "^0.2", default-features = false }
+num-traits = { version = "^0.2", default-features = false }
 approx = "^0.5"
 
 [dependencies.serde]
@@ -33,6 +36,7 @@ optional = true
 [features]
 default = ["std"]
 std = ["glam/std", "num-traits/std"]
+scalar-math = ["glam/scalar-math"]
 
 # Enable conversions to `mint` types
 mint = ["mint_crate", "glam/mint"]
