--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ optional = true
 default = ["std"]
 std = ["glam/std", "num-traits/std"]
 scalar-math = ["glam/scalar-math", "glam_0_20?/scalar-math"]
+serde = ["dep:serde", "glam/serde"]
 
 # Enable conversions to `mint` types
 mint = ["dep:mint", "glam/mint"]
