--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,8 @@ euclid = "^0.22"
 derive_more = "^0.99"
 bytemuck = { version = "^1.8", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
+# Used for testing serialization
+serde_json = "1.0.82"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 criterion = { version = "^0.3", features = ["html_reports"] }
