--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ optional = true
 default = ["std"]
 std = ["glam/std", "num-traits/std"]
 scalar-math = ["glam/scalar-math", "glam_0_20?/scalar-math"]
+serde = ["dep:serde", "glam/serde"]
 
 # Enable conversions to `mint` types
 mint = ["dep:mint", "glam/mint"]
@@ -57,6 +58,8 @@ euclid = "^0.22"
 derive_more = "^0.99"
 bytemuck = { version = "^1.8", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
+# Used for testing serialization
+serde_json = "1.0.82"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 criterion = { version = "^0.3", features = ["html_reports"] }
