--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,11 @@ version = "0.20.0"
 package = "glam"
 optional = true
 
+[dependencies.encase]
+version = "0.3.0"
+features = ["glam"]
+optional = true
+
 [features]
 default = ["std"]
 std = ["glam/std", "num-traits/std"]
