Remove glam_0_20 feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,6 @@ version = "^0.5"
 package = "mint"
 optional = true
 
-[dependencies.glam_0_20]
-version = "0.20.0"
-package = "glam"
-optional = true
-
 [dependencies.encase]
 version = "0.3.0"
 features = ["glam"]
@@ -46,17 +41,14 @@ optional = true
 [features]
 default = ["std"]
 std = ["glam/std", "num-traits/std"]
-scalar-math = ["glam/scalar-math", "glam_0_20?/scalar-math"]
+scalar-math = ["glam/scalar-math"]
 serde = ["dep:serde", "glam/serde"]
 
 # Enable conversions to `mint` types
 mint = ["dep:mint", "glam/mint"]
 
-# Enable conversions to `bevy` 0.7.x math types (which uses glam 0.20.0).
-bevy_0_7_0 = ["glam_0_20"]
-
 # Required for compiling without `std`.
-libm = ["glam/libm", "num-traits/libm", "glam_0_20?/libm"]
+libm = ["glam/libm", "num-traits/libm"]
 
 [dev-dependencies]
 euclid = "^0.22"
