--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["game-development", "mathematics", "graphics", "no-std"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-glam = { version = "0.21.1", default-features = false, features = [
+glam = { version = "0.22.0", default-features = false, features = [
     "bytemuck",
     "approx",
 ] }
@@ -34,7 +34,7 @@ package = "mint"
 optional = true
 
 [dependencies.encase]
-version = "0.3.0"
+version = "0.4.1"
 features = ["glam"]
 optional = true
 
@@ -43,6 +43,7 @@ default = ["std"]
 std = ["glam/std", "num-traits/std"]
 scalar-math = ["glam/scalar-math"]
 serde = ["dep:serde", "glam/serde"]
+core-simd = ["glam/core-simd"]
 
 # Enable conversions to `mint` types
 mint = ["dep:mint", "glam/mint"]
