--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,7 @@ categories = ["game-development", "mathematics", "graphics", "no-std"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-# glam = { version = "0.24.0", default-features = false, features = [
-#     "bytemuck",
-#     "approx",
-# ] }
-glam = { git = "https://github.com/simonask/glam-rs.git", branch = "bytemuck-i64-u64", features = [
+glam = { version = "0.24.1", default-features = false, features = [
     "bytemuck",
     "approx",
 ] }
@@ -38,7 +34,7 @@ package = "mint"
 optional = true
 
 [dependencies.encase]
-version = "0.5.0"
+version = "0.6.0"
 features = ["glam"]
 optional = true
 
