--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,8 +58,8 @@ bytemuck = { version = "^1.8", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
 # Used for testing serialization
 serde_json = "1.0.82"
-# Used for testing hashing
-hashbrown = "0.14.0"
+# Used for testing hashing. Using an old version because of MSRV.
+hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 criterion = { version = "^0.3", features = ["html_reports"] }
