--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["game-development", "mathematics", "graphics", "no-std"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-glam = { version = "0.23.0", default-features = false, features = [
+glam = { version = ">=0.24.1", default-features = false, features = [
     "bytemuck",
     "approx",
 ] }
@@ -34,7 +34,7 @@ package = "mint"
 optional = true
 
 [dependencies.encase]
-version = "0.5.0"
+version = "0.6.0"
 features = ["glam"]
 optional = true
 
@@ -58,6 +58,8 @@ bytemuck = { version = "^1.8", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
 # Used for testing serialization
 serde_json = "1.0.82"
+# Used for testing hashing. Using an old version because of MSRV.
+hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 criterion = { version = "^0.3", features = ["html_reports"] }
