--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "glamour"
-version = "0.10.0"
+version = "0.10.1"
 edition = "2021"
 description = "Strongly typed linear algebra with glam"
 authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
@@ -8,8 +8,19 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/simonask/glamour"
 homepage = "https://docs.rs/glamour/latest/glamour/"
-keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
-categories = ["game-development", "mathematics", "graphics", "no-std"]
+keywords = [
+    "gamedev",
+    "math",
+    "matrix",
+    "vector",
+    "quaternion",
+]
+categories = [
+    "game-development",
+    "mathematics",
+    "graphics",
+    "no-std",
+]
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -61,7 +72,9 @@ serde_json = "1.0.82"
 hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { version = "=0.4.0", features = ["html_reports"] }
+criterion = { version = "=0.4.0", features = [
+    "html_reports",
+] }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3.0"
