Fix Glam Version
Prevent premature bump to a future semver-incompatible glam version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ categories = [
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-glam = { version = ">=0.25.0", default-features = false, features = [
+glam = { version = "0.25.0", default-features = false, features = [
     "bytemuck",
     "approx",
 ] }
