--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ bytemuck = { version = "^1.8", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
 # Used for testing serialization
 serde_json = "1.0.82"
+serde_test = { version = "^1.0" }
 # Used for testing hashing. Using an old version because of MSRV.
 hashbrown = "=0.13.2"
 
