--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ serde_test = { version = "^1.0" }
 hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { version = "=0.4.0", features = [
+criterion = { version = "0.5.1", features = [
     "html_reports",
 ] }
 
