--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ libm = ["glam/libm", "num-traits/libm"]
 euclid = "^0.22"
 derive_more = "^0.99"
 bytemuck = { version = "^1.8", features = ["derive"] }
-serde = { version = "^1.0", features = ["derive"] }
+serde = { version = "^1.0" }
 # Used for testing serialization
 serde_json = "1.0.82"
 serde_test = { version = "^1.0" }
