--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ approx = "^0.5"
 
 [dependencies.serde]
 version = "^1.0"
-features = ["derive"]
+default-features = false
 optional = true
 
 [dependencies.mint]
