--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ approx = "^0.5"
 
 [dependencies.serde]
 version = "^1.0"
-features = ["derive"]
+default-features = false
 optional = true
 
 [dependencies.mint]
@@ -65,14 +65,15 @@ libm = ["glam/libm", "num-traits/libm"]
 euclid = "^0.22"
 derive_more = "^0.99"
 bytemuck = { version = "^1.8", features = ["derive"] }
-serde = { version = "^1.0", features = ["derive"] }
+serde = { version = "^1.0" }
 # Used for testing serialization
 serde_json = "1.0.82"
+serde_test = { version = "^1.0" }
 # Used for testing hashing. Using an old version because of MSRV.
 hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { version = "=0.4.0", features = [
+criterion = { version = "0.5.1", features = [
     "html_reports",
 ] }
 
