Temporarily use wasmtime from git

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,14 @@ categories = ["game-development", "mathematics", "graphics", "no-std"]
 [badges]
 maintenance = { status = "actively-developed" }
 
+[dependencies.wasmtime]
+# Waiting for this to be released: https://github.com/bytecodealliance/wasmtime/pull/8693
+git = "http://github.com/bytecodealliance/wasmtime"
+rev = "28ee78b"
+optional = true
+default-features = false
+features = ["runtime", "component-model"]
+
 [dependencies]
 glam = { version = "0.28.0", default-features = false, features = [
     "bytemuck",
@@ -22,11 +30,6 @@ glam = { version = "0.28.0", default-features = false, features = [
 bytemuck = { version = "^1.8", default-features = false }
 num-traits = { version = "^0.2.19", default-features = false }
 approx = "^0.5"
-wasmtime = { version = "*", optional = true, default-features = false, features = [
-    "runtime",
-    "component-model",
-] }
-
 [dependencies.serde]
 version = "^1.0"
 default-features = false
