--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,8 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/simonask/glamour"
 homepage = "https://docs.rs/glamour/latest/glamour/"
-keywords = [
-    "gamedev",
-    "math",
-    "matrix",
-    "vector",
-    "quaternion",
-]
-categories = [
-    "game-development",
-    "mathematics",
-    "graphics",
-    "no-std",
-]
+keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
+categories = ["game-development", "mathematics", "graphics", "no-std"]
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -31,7 +20,7 @@ glam = { version = "0.27.0", default-features = false, features = [
     "approx",
 ] }
 bytemuck = { version = "^1.8", default-features = false }
-num-traits = { version = "^0.2", default-features = false }
+num-traits = { version = "^0.2.19", default-features = false }
 approx = "^0.5"
 
 [dependencies.serde]
@@ -73,9 +62,7 @@ serde_test = { version = "^1.0" }
 hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { version = "0.5.1", features = [
-    "html_reports",
-] }
+criterion = { version = "0.5.1", features = ["html_reports"] }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3.0"
