Trait reform (Rust 1.79, glam 0.28) (#52)
* Use TransparentWrapper everywhere

* Use num-traits more extensively

* as_() method

* glam 0.28

* Lints

* Remove Vector3::angle_to

* Fix CI workflow

* Lints

* Lints

* Use a custom Transparent trait

* CI: update wasm toolchain

* Change Transparent to use associated types

* Major macro refactoring

* Refactor macros that generate arithmetic ops

* Constrain interfaces to the relevant vector/point/size types

* Bump version, lints

* Added missing impl Default for Box2, Box3

* Add Box2::ONE, Box3::ONE

* Constify Box2::new, Box3::new

* Coverage golf (Box2, Box3)

* Coverage golf (Point, Rect, Size, Transform, Vector)

* Fixed serialization test

* Coverage golf (try_cast)

* Coverage golf (Size tuple conversion)

* Remove Unit::name()

* Coverage golf (Matrix2)

* Coverage golf (Matrix2::from_rows)

* Coverage golf (vector to/from tuple)

* Coverage golf (RelativeEq, UlpsEq)

* Coverage golf (Scalar)

* Test deserialization errors

* Coverage golf (Rect, Matrix)

* Bump MSRV in README

* Reformat CHANGELOG.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "glamour"
-version = "0.11.1"
+version = "0.12.0"
 edition = "2021"
 description = "Strongly typed linear algebra with glam"
 authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
@@ -8,30 +8,19 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/simonask/glamour"
 homepage = "https://docs.rs/glamour/latest/glamour/"
-keywords = [
-    "gamedev",
-    "math",
-    "matrix",
-    "vector",
-    "quaternion",
-]
-categories = [
-    "game-development",
-    "mathematics",
-    "graphics",
-    "no-std",
-]
+keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
+categories = ["game-development", "mathematics", "graphics", "no-std"]
 
 [badges]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-glam = { version = "0.27.0", default-features = false, features = [
+glam = { version = "0.28.0", default-features = false, features = [
     "bytemuck",
     "approx",
 ] }
 bytemuck = { version = "^1.8", default-features = false }
-num-traits = { version = "^0.2", default-features = false }
+num-traits = { version = "^0.2.19", default-features = false }
 approx = "^0.5"
 
 [dependencies.serde]
@@ -73,9 +62,7 @@ serde_test = { version = "^1.0" }
 hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { version = "0.5.1", features = [
-    "html_reports",
-] }
+criterion = { version = "0.5.1", features = ["html_reports"] }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3.0"
