--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          components: rustfmt, clippy
+      - run: rustup update --no-self-update stable
+      - run: rustup default stable
 
       # make sure all code has been formatted with rustfmt and linted with clippy
       - name: rustfmt
@@ -32,7 +30,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        # toolchain: [1.65.0, stable, beta, nightly]
         toolchain: [stable, beta, nightly]
     runs-on: ${{ matrix.os }}
     steps:
@@ -50,6 +47,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+
+      - run: rustup update --no-self-update stable
+      - run: rustup default stable
 
       - name: Install
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
