--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,19 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/simonask/glamour"
 homepage = "https://docs.rs/glamour/latest/glamour/"
-keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]
-categories = ["game-development", "mathematics", "graphics", "no-std"]
+keywords = [
+    "gamedev",
+    "math",
+    "matrix",
+    "vector",
+    "quaternion",
+]
+categories = [
+    "game-development",
+    "mathematics",
+    "graphics",
+    "no-std",
+]
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -29,7 +40,7 @@ optional = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies.wasmtime]
 git = "http://github.com/bytecodealliance/wasmtime"
-rev = "28ee78b"
+branch = "release-23.0.0"
 optional = true
 default-features = false
 features = ["runtime", "component-model"]
@@ -68,7 +79,9 @@ serde_test = { version = "^1.0" }
 hashbrown = "=0.13.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { version = "0.5.1", features = ["html_reports"] }
+criterion = { version = "0.5.1", features = [
+    "html_reports",
+] }
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3.0"
