--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,14 +33,14 @@ glam = { version = "0.28.0", default-features = false, features = [
 bytemuck = { version = "^1.8", default-features = false }
 num-traits = { version = "^0.2.19", default-features = false }
 approx = "^0.5"
+
 [dependencies.serde]
 version = "^1.0"
 default-features = false
 optional = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies.wasmtime]
-git = "http://github.com/bytecodealliance/wasmtime"
-branch = "release-23.0.0"
+version = "23.0.1"
 optional = true
 default-features = false
 features = ["runtime", "component-model"]
