Update deny.toml to ignore multiple occurrences of hashbrown

--- a/deny.toml
+++ b/deny.toml
@@ -4,6 +4,8 @@ deny = []
 skip-tree = [
     # ignore criterion dev-dependency that often have duplicate dependencies internally
     { name = "criterion" },
+    # wasmtime includes multiple versions of hashbrown via cranelift-codegen
+    { name = "hashbrown" },
 ]
 
 [licenses]
