--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ glam = { version = "0.30.0", default-features = false, features = [
     "bytemuck",
     "approx",
 ] }
-bytemuck = { version = "^1.8", default-features = false }
+bytemuck = { version = "^1.23", default-features = false, features = ["must_cast"] }
 num-traits = { version = "^0.2.19", default-features = false }
 approx = "^0.5"
 facet = { version = "0.18.4", optional = true, default-features = false }
